# OCTAVIAN

./: .gitignore  CMakeLists.txt  ECSEngine.sln  OCTAVIAN.sln  README.md  designNotes.txt  gitBashOctavian.lnk
ECS/: CMakeLists.txt  ECS.vcxproj  ECS.vcxproj.filters
ECS/ECS_Renderer_Output/: hitBoxData.h
ECS/SPAGHETTI/include/: OCT_ECS.h
ECS/ZZZTestRuntime/: zzzTestMain.c  zzzTestMain.h
ECS/include/: ECS.h  ECStypes.h  OCT_ECS.h  gameLogic.h  myStandards.h  renderer.h
ECS/include/ECS/: componentPools.h  componentTypes.h  gameObjects.h  pools.h  scenes.h  types.h
ECS/include/ECS_Renderer_Output/: REN_include.h  hitBoxData.h  spriteData.h
ECS/include/Runtime/: updates.h
ECS/include/_ECS_Input/: messageHandling.h
ECS/include/_ECS_Output/: _ECS_include.h  _REN_include.h  vertexData.h
ECS/include/definitions/: APITypes.h  aliases.h  defaultValues.h  errorCodes.h
ECS/include/errors/: errorHandling.h
ECS/include/math/: vectors.h
ECS/include/module/: ECSModule.h
ECS/include/standards/: ECSStandards.h
ECS/internal/ECS/: types_internal.h
ECS/internal/ECS_Renderer_Output/: hitBoxData.c  hitBoxData_API.c  hitBoxData_internal.h  vertexData.c  vertexData_API.c  vertexData_internal.h
ECS/internal/_ECS_Input/: messageHandling.c  messageHandling_API.c  messageHandling_internal.h
ECS/internal/_ECS_Output/: transformRequest.c  vertexData.c
ECS/internal/definitions/: APITypes_internal.h  aliases_internal.h  colors_internal.h  defaultValues.h
ECS/resources/: resources.aps
ECS/src/: myStandards.c
ECS/tests/: newTestMain.c  zzzTestMain.c
(+894 files in other folders)
